<resources>
    <string name="app_name">dembe</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="age">Age</string>
    <string name="adresse">Adresse</string>
    <string name="email">Email</string>
    <string name="telephone">Telephone</string>
    <string name="specialite">Specialite</string>
    <string name="niveauEtude">NiveauEtude</string>
    <string name="experienceProfessionnelle">ExperienceProfessionnelle</string>
    <string name="postuler">Postuler</string>

</resources>