<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="520dp"
        android:orientation="vertical"
        android:layout_marginBottom="520dp"
        android:minHeight="60dp"
        android:layout_alignParentBottom="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/img_1"
            android:scaleType="centerCrop" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="80dp"
        android:minHeight="60dp"
        android:layout_alignParentBottom="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_textFieldNom"
            android:hint="@string/nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_textFieldPrenom"
            android:hint="@string/prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_textFieldAge"
            android:hint="@string/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_textFieldAdresse"
            android:hint="@string/adresse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_textFieldEmail"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_textFieldTelephone"
            android:hint="@string/telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_textFieldSpecialite"
            android:hint="@string/specialite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_textFieldNiveauEtude"
            android:hint="@string/niveauEtude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_textFieldExperienceProfessionnelle"
            android:hint="@string/experienceProfessionnelle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom" >
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_gravity="bottom"
        android:id="@+id/form_buttonPostuler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:minHeight="60dp"
        android:layout_alignParentBottom="true"
        android:text="Postuler" />
</RelativeLayout>